welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:18: error: not found: value i
 for (i <- decalage to (i+5)%T.length) {
                        ^